# final-project-doohickey-engineering

./: CMakeLists.txt  README.md  demo_hacker_bouncer.sh  latency_runs.txt  raft_setup.md  raft_state_auth-1.txt  raft_state_auth-2.txt  raft_state_auth-3.txt  raft_state_node-1.txt  raft_state_node-2.txt  raft_state_node-3.txt  test_raft_local.sh
bench/: latency_plot.py
docker/: Dockerfile  build_log.txt  docker-compose.yml
docker/scripts/: run_tests.sh
include/: data_plane_service.h  lamport_clock.h  log_entry.h  log_store.h  raft_node.h
proto/: locality_messaging.proto
src/: correctness_eval.cpp  crash_sim.cpp  data_plane_service.cpp  fake_auth_server.cpp  lamport_clock.cpp  latency_bench.cpp  log_client.cpp  log_server.cpp  log_store.cpp  partition_sim.cpp  raft_node.cpp  raft_server.cpp  raft_test_client.cpp
tests/: test_acl.cpp  test_convergence.cpp  test_full_system.cpp  test_grpc_integration.cpp  test_log_store.cpp  test_main.cpp  test_raft_crash.cpp  test_raft_rpcs.cpp  test_replay_sync.cpp  test_system_stress.cpp  tests_lamport_clock.cpp
